Fix table overlap

--- a/src/components/UI/styles/Page.module.css
+++ b/src/components/UI/styles/Page.module.css
@@ -3,9 +3,11 @@
 }
 
 .Actions {
+  height: 4vh;
   width: 100%;
   display: flex;
   flex-flow: row;
+  margin-bottom: 2px;
 }
 
 .Actions div {
